2013-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_write_prvkey): Remove information (but
	pass phrase length) for admin from keystring data object.
	(proc_key_import): Recover admin keystring to DO when key deletion.

2013-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_user_0, verify_admin_00): Handle PW_LEN_MASK.
	* src/openpgp-do.c (proc_resetting_code, gpg_do_write_prvkey):
	Likewise.

	* src/openpgp.c (cmd_change_password, cmd_reset_user_password):
	Handle PW_LEN_KEYSTRING_BIT.

2013-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_admin_00): New.  Add authentication by loading
	signature key.
	(verify_admin_0): Use verify_admin_00.

	* src/openpgp.c (cmd_change_password): Admin keystring handling as
	same as user's.

2013-10-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (modify_binary): Allow odd size of certificate.

	* polarssl/library/rsa.c: Update from PolarSSL 1.2.10.
	* polarssl/include/polarssl/rsa.h: Ditto.

2013-10-07  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_sub_hlp): Return CARRY.
	(mpi_sub_abs): Carry propagatoin is done here.
	(mpi_mul_hlp_mm): Remove.
	(mpi_mul_hlp): Return CARRY, computation in constant time.
	(mpi_mul_mpi): Change the order of computation not to propagate
	carry.
	(mpi_montmul): Minimum zero-ing of D and reduce usage of temporary
	memory, by one word.  Use carry of mpi_mul_hlp.  Use
	NEED_SUBTRACTION against timing attack.
	(mpi_exp_mod): Minimum usage of temporary memory.

2013-10-06  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_mul_hlp_mm): New.  Handle
	extra-carry in constant time to mitigate timing attack.
	(mpi_montmul): Use mpi_mul_hlp_mm.
	* src/call-rsa.c (rsa_sign, rsa_decrypt, rsa_verify): Don't
	use RSA blinding.

2013-10-05  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/aes.h: Update from PolarSSL 1.2.9.
	* polarssl/include/polarssl/bignum.h: Ditto.
	* polarssl/include/polarssl/config.h: Ditto.