@@ -60,11 +60,13 @@ ac_reset_other (void)
 
 int
 verify_user_0 (uint8_t access, const uint8_t *pw, int buf_len, int pw_len_known,
-	       const uint8_t *ks_pw1)
+	       const uint8_t *ks_pw1, int save_ks)
 {
   int pw_len;
   int r1, r2;
   uint8_t keystring[KEYSTRING_MD_SIZE];
+  const uint8_t *salt;
+  int salt_len;
 
   if (gpg_pw_locked (PW_ERR_PW1))
     return 0;
@@ -72,26 +74,28 @@ verify_user_0 (uint8_t access, const uint8_t *pw, int buf_len, int pw_len_known,
   if (ks_pw1 == NULL)
     {
       pw_len = strlen (OPENPGP_CARD_INITIAL_PW1);
+      salt = NULL;
+      salt_len = 0;
       if ((pw_len_known >= 0 && pw_len_known != pw_len)
 	  || buf_len < pw_len
 	  || strncmp ((const char *)pw, OPENPGP_CARD_INITIAL_PW1, pw_len))
 	goto failure;
-      else
-	goto success_one_step;
     }
   else
-    pw_len = ks_pw1[0] & PW_LEN_MASK;
-
-  if ((pw_len_known >= 0 && pw_len_known != pw_len)
-      || buf_len < pw_len)
     {
-    failure:
-      gpg_pw_increment_err_counter (PW_ERR_PW1);
-      return -1;
+      pw_len = ks_pw1[0] & PW_LEN_MASK;
+      salt = KS_GET_SALT (ks_pw1);
+      salt_len = SALT_SIZE;
+
+      if ((pw_len_known >= 0 && pw_len_known != pw_len)
+	  || buf_len < pw_len)
+	goto failure;
     }
 
- success_one_step:
-  s2k (BY_USER, pw, pw_len, keystring);
+  s2k (salt, salt_len, pw, pw_len, keystring);
+  if (save_ks)
+    memcpy (keystring_md_pw3, keystring, KEYSTRING_MD_SIZE);
+
   if (access == AC_PSO_CDS_AUTHORIZED)
     {
       r1 = gpg_do_load_prvkey (GPG_KEY_FOR_SIGNING, BY_USER, keystring);
@@ -103,14 +107,15 @@ verify_user_0 (uint8_t access, const uint8_t *pw, int buf_len, int pw_len_known,
       r2 = gpg_do_load_prvkey (GPG_KEY_FOR_AUTHENTICATION, BY_USER, keystring);
     }
 
-  if (r1 < 0 || r2 < 0)
+  if (r1 < 0 || r2 < 0
+      || (r1 == 0 && r2 == 0 && ks_pw1 != NULL
+	  && memcmp (KS_GET_KEYSTRING (ks_pw1),
+		     keystring, KEYSTRING_MD_SIZE) != 0))
     {
+    failure:
       gpg_pw_increment_err_counter (PW_ERR_PW1);
       return -1;
     }
-  else if (r1 == 0 && r2 == 0)
-    if (ks_pw1 != NULL && memcmp (ks_pw1+1, keystring, KEYSTRING_MD_SIZE) != 0)
-      goto failure;
 
   gpg_pw_reset_err_counter (PW_ERR_PW1);
   return pw_len;
@@ -128,7 +133,7 @@ verify_pso_cds (const uint8_t *pw, int pw_len)
   DEBUG_INFO ("verify_pso_cds\r\n");
   DEBUG_BYTE (pw_len);
 
-  r = verify_user_0 (AC_PSO_CDS_AUTHORIZED, pw, pw_len, pw_len, ks_pw1);
+  r = verify_user_0 (AC_PSO_CDS_AUTHORIZED, pw, pw_len, pw_len, ks_pw1, 0);
   if (r > 0)
     auth_status |= AC_PSO_CDS_AUTHORIZED;
   return r;
@@ -143,70 +148,41 @@ verify_other (const uint8_t *pw, int pw_len)
   DEBUG_INFO ("verify_other\r\n");
   DEBUG_BYTE (pw_len);
 
-  r = verify_user_0 (AC_OTHER_AUTHORIZED, pw, pw_len, pw_len, ks_pw1);
+  r = verify_user_0 (AC_OTHER_AUTHORIZED, pw, pw_len, pw_len, ks_pw1, 0);
   if (r > 0)
     auth_status |= AC_OTHER_AUTHORIZED;
   return r;
 }
 
-/*
- * For keystring of PW3, we use SALT+ITER+MD format
- */
-
-static uint32_t
-decode_iterate_count (uint8_t x)
-{
-  return (16UL + ((x) & 15)) << (((x) >> 4) + 6);
-}
-
-static void
-calc_md (int count, const uint8_t *salt, const uint8_t *pw, int pw_len,
-	 uint8_t md[KEYSTRING_MD_SIZE])
-{
-  sha256_context sha256_ctx;
-
-  sha256_start (&sha256_ctx);
-
-  while (count > pw_len + 8)
-    {
-      sha256_update (&sha256_ctx, salt, 8);
-      sha256_update (&sha256_ctx, pw, pw_len);
-      count -= pw_len + 8;
-    }
-
-  if (count <= 8)
-    sha256_update (&sha256_ctx, salt, count);
-  else
-    {
-      sha256_update (&sha256_ctx, salt, 8);
-      count -= 8;
-      sha256_update (&sha256_ctx, pw, count);
-    }
-
-  sha256_finish (&sha256_ctx, md);
-}
-
 
 static int
 verify_admin_00 (const uint8_t *pw, int buf_len, int pw_len_known,
-		 const uint8_t *ks)
+		 const uint8_t *ks, int save_ks)
 {
   int pw_len;
   int r1, r2;
   uint8_t keystring[KEYSTRING_MD_SIZE];
+  const uint8_t *salt;
+  int salt_len;
 
   pw_len = ks[0] & PW_LEN_MASK;
+  salt = KS_GET_SALT (ks);
+  salt_len = SALT_SIZE;
+  
   if ((pw_len_known >= 0 && pw_len_known != pw_len) || buf_len < pw_len)
     return -1;
 
-  s2k (BY_ADMIN, pw, pw_len, keystring);
+  s2k (salt, salt_len, pw, pw_len, keystring);
+  if (save_ks)
+    memcpy (keystring_md_pw3, keystring, KEYSTRING_MD_SIZE);
+
   r1 = gpg_do_load_prvkey (GPG_KEY_FOR_SIGNING, BY_ADMIN, keystring);
   r2 = 0;
 
   if (r1 < 0 || r2 < 0)
     return -1;
   else if (r1 == 0 && r2 == 0)
-    if (ks != NULL && memcmp (ks+1, keystring, KEYSTRING_MD_SIZE) != 0)
+    if (memcmp (KS_GET_KEYSTRING (ks), keystring, KEYSTRING_MD_SIZE) != 0)
       return -1;
 
   return pw_len;
@@ -216,18 +192,18 @@ uint8_t keystring_md_pw3[KEYSTRING_MD_SIZE];
 uint8_t admin_authorized;
 
 int
-verify_admin_0 (const uint8_t *pw, int buf_len, int pw_len_known)
+verify_admin_0 (const uint8_t *pw, int buf_len, int pw_len_known,
+		const uint8_t *pw3_keystring, int save_ks)
 {
-  const uint8_t *pw3_keystring;
   int pw_len;
 
-  pw3_keystring = gpg_do_read_simple (NR_DO_KEYSTRING_PW3);
   if (pw3_keystring != NULL)
     {
       if (gpg_pw_locked (PW_ERR_PW3))
 	return 0;
 
-      pw_len = verify_admin_00 (pw, buf_len, pw_len_known, pw3_keystring);
+      pw_len = verify_admin_00 (pw, buf_len, pw_len_known, pw3_keystring,
+				save_ks);
       if (pw_len < 0)
 	{
 	failure:
@@ -247,7 +223,7 @@ verify_admin_0 (const uint8_t *pw, int buf_len, int pw_len_known)
       if (ks_pw1 != NULL)
 	{	  /* empty PW3, but PW1 exists */
 	  int r = verify_user_0 (AC_PSO_CDS_AUTHORIZED,
-				 pw, buf_len, pw_len_known, ks_pw1);
+				 pw, buf_len, pw_len_known, ks_pw1, save_ks);
 
 	  if (r > 0)
 	    admin_authorized = BY_USER;
@@ -269,37 +245,24 @@ verify_admin_0 (const uint8_t *pw, int buf_len, int pw_len_known)
 	goto failure;
 
       admin_authorized = BY_ADMIN;
+      if (save_ks)
+	s2k (NULL, 0, pw, pw_len, keystring_md_pw3);
       goto success;
     }
 }
 
-void
-gpg_set_pw3 (const uint8_t *newpw, int newpw_len)
-{
-  uint8_t ks[KEYSTRING_SIZE_PW3];
-  uint32_t random;
-
-  ks[0] = newpw_len;
-  random = get_salt ();
-  memcpy (&ks[1], &random, sizeof (random));
-  random = get_salt ();
-  memcpy (&ks[5], &random, sizeof (random));
-  ks[9] = 0x60;			/* 65536 iterations */
-
-  calc_md (65536, &ks[1], newpw, newpw_len, &ks[10]);
-  gpg_do_write_simple (NR_DO_KEYSTRING_PW3, ks, KEYSTRING_SIZE_PW3);
-}
 
 int
 verify_admin (const uint8_t *pw, int pw_len)
 {
   int r;
+  const uint8_t *pw3_keystring;
 
-  r = verify_admin_0 (pw, pw_len, pw_len);
+  pw3_keystring = gpg_do_read_simple (NR_DO_KEYSTRING_PW3);
+  r = verify_admin_0 (pw, pw_len, pw_len, pw3_keystring, 1);
   if (r <= 0)
     return r;
 
-  s2k (admin_authorized, pw, pw_len, keystring_md_pw3);
   auth_status |= AC_ADMIN_AUTHORIZED;
   return 1;
 }
